--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   </head>
   <body>
     <!-- Header section -->
-    <header>
-      <h1>Pete Thinkful | Artist</h1>
-      <nav>
+    <header class="container">
+      <h1 class=" flex-items">Pete Thinkful | Artist</h1>
+      <nav class=" flex-items">
         <a href="#about">About</a>
         <a href="#portfolio">Portfolio</a>
         <a href="#contact">Contact</a>
@@ -26,16 +26,19 @@
       <div>
         <!-- About section -->
         <article id="about">
-          <h2>About</h2>
-          <section>
-            <h3>Hi! I'm Pete Thinkful</h3>
+          <h2  >About</h2>
+          <section class="container">
             <div>
-              <img
+            <img
+            
                 class="image-circle"
                 src="images/pete-thinkful.png"
                 alt="Pete Thinkful"
               />
-            </div>
+              </div>
+              <div class=" flex-items">
+            <h3 >Hi! I'm Pete Thinkful</h3>
+                            
             <p>I'm an artist living in Denver, Colorado.</p>
             <p>As an artist, I'm interested in:</p>
             <ul>
@@ -47,6 +50,7 @@
               Please feel free to take a look at my website and feel free to
               <a href="#contact">contact me</a>.
             </p>
+          </div>
           </section>
 
           <section>
@@ -67,40 +71,42 @@
         <hr />
 
         <!-- Portfolio section -->
-        <article id="portfolio">
-          <h2>Portfolio</h2>
-          <section>
-            <h3>Abstract Red</h3>
+        <article id="portfolio" style= "font-size:14px">
+          <h2 >Portfolio</h2>
+        <div class="container">
+          <section class=" flex-items">
+            <h3 >Abstract Red</h3>
             <div>
               <img src="images/abstract-red.png" alt="Abstract Red" />
             </div>
-            <p>
+            <p style="text-align: center">
               Vaporware wayfarers heirloom neutra disrupt. Activated charcoal
               waistcoat scenester hell of.
             </p>
           </section>
 
-          <section>
+          <section class=" flex-items">
             <h3>Spiral Zany</h3>
             <div>
               <img src="images/spiral-zany.png" alt="Spiral Zany" />
             </div>
-            <p>
+            <p style="text-align:center">
               Sriracha portland taxidermy cronut messenger bag, vegan
               distillery. Vaporware kickstarter air plant mumblecore food truck.
             </p>
           </section>
 
-          <section>
+          <section class=" flex-items">
             <h3>Melted Rainbow</h3>
             <div>
               <img src="images/melted-rainbow.png" alt="Melted Rainbow" />
             </div>
-            <p>
+            <p style="text-align: center">
               Edison bulb single-origin coffee snackwave, actually ennui
               locavore shabby chic forage.
             </p>
           </section>
+          </div>
         </article>
 
         <hr />
@@ -128,7 +134,7 @@
 
     <!-- Footer section -->
     <footer>
-      <p>© Pete Thinkful. All rights reserved.</p>
+      <p style="text-align: center">© Pete Thinkful. All rights reserved.</p>
     </footer>
   </body>
 </html>
